# N-spirits

./: .gitignore  CMakeLists.txt  MLib.pro  N-spirits.pro  N-spirits.pro.user.65b80f7  N-spirits.pro.user.801fe49  README.md  SimpleML.pro  activate.h  bayes.h  complexnumber.h  conv.h  csv.h  cylinder_400x200_r12_mu3e-3.avi  dataset.h  fft.h  func.h  func.h.autosave  gmm.h  grad.h  hmm.h  icylinder_400x200_r12_mu3e-3.avi  kernel.h  kmeans.h  layer.h  layerdef.h  layerparam.h  linearalgebra.cpp  linearalgebra.h  linearregression.h  loss.h  main.cpp  mat.cpp  mat.h  optimize.h  optimizer.h  svm.h  tensor.h  test.cpp  testcpp.cpp  (+3 more)
LBM/: CMakeLists.txt  lbm.cpp  lbm.h
basic/: CMakeLists.txt  alignallocator.hpp  avx2func.hpp  avx2wrapper.hpp  basic.pri  basic_def.h  complexnumber.h  ctensor.hpp  exprfunc.hpp  expt.hpp  fft.h  interpolation.hpp  kernel.h  linalg.cpp  linalg.h  linearalgebra.cpp  linearalgebra.h  mat.h  mats.hpp  optimization.hpp  point.hpp  quaternion.hpp  simd.hpp  sse2func.hpp  sse2wrapper.hpp  statistics.h  tensor.h  tensor.hpp  tensorsi.hpp  util.hpp  utils.h  vec.h
basic/simd/: avx2func.hpp  avx2wrapper.hpp  sse2func.hpp  sse2wrapper.hpp  tensorsi.hpp
dl/: activate.h  activate.hpp  autograd.h  conv.hpp  conv2d.hpp  layer.h  layer.hpp  layerdef.h  loss.h  loss.hpp  lstm.hpp  net.h  net.hpp  net.pri  optimize.h  optimize.hpp  optimizer.h  optimizer.hpp  transformer.hpp  vae.hpp
fluid/: CMakeLists.txt  eulerian.hpp  lbm.h  mesh.hpp  physics.hpp
improcess/: CMakeLists.txt  bmp.hpp  color.cpp  color.h  features.cpp  features.h  filter.cpp  filter.h  geometrytransform.cpp  geometrytransform.h  graphic.cpp  graphic.h  graphic2d.cpp  graphic2d.h  graphic3d.cpp  graphic3d.h  image.hpp  improcess.cpp  improcess.h  improcess_def.h  jpegwrap.cpp  jpegwrap.h  lineartransform.cpp  lineartransform.h  noise.cpp  noise.h  platformwin.cpp  platformwin.h  point.hpp  ppm.hpp
improcess/jpegwrap/: jpegwrap.cpp  jpegwrap.h
improcess/platform/linux/: naivepage.cpp  naivepage.h  viewpage.cpp  viewpage.h
improcess/platform/windows/: naivepage.cpp  naivepage.h  viewpage.cpp  viewpage.h
ml/: adaboost.hpp  bayes.h  decisiontree.hpp  gmm.h  hmm.h  hopfieldnet.hpp  kdtree.hpp  kmeans.h  lime.hpp  linearregression.h  logistic.hpp  meanshift.hpp  ml.pri  svm.h
net/: activate.h  conv.h  conv.hpp  conv2d.hpp  grad.h  layer.h  layerdef.h  loss.h  lstm.hpp  net.h  net.pri  optimize.h  optimizer.h
simcl/: CMakeLists.txt  allocator.hpp  evaluate.hpp  kernel.hpp  simcl.cpp  simcl.h  simcl.hpp
test/: test_dl.cpp  test_improcess.cpp  test_lbm.cpp  test_ml.cpp  test_simcl.cpp  test_simd.cpp  testcpp.cpp
utils/: clock.hpp  dataset.h  imageutils.h  metautil.h  utils.pri
