cmake_minimum_required(VERSION 3.5)

LIST(APPEND LBM_DIR ${PROJECT_SOURCE_DIR}/LBM)
foreach(LBM_CURRENT_DIR ${LBM_DIR})
	file(GLOB_RECURSE LBM_SRCS ${LBM_CURRENT_DIR}/*.cpp)
	file(GLOB_RECURSE LBM_HDRS ${LBM_CURRENT_DIR}/*.h)
	file(GLOB_RECURSE LBM_HPPS ${LBM_CURRENT_DIR}/*.hpp)
	LIST(APPEND LBM_SRC_LIST ${LBM_SRCS})
	LIST(APPEND LBM_HDR_LIST ${LBM_HDRS} ${LBM_HPPS})
endforeach()
add_library(LBM STATIC ${LBM_SRC_LIST} ${LBM_HDR_LIST})
