cmake_minimum_required(VERSION 3.5)

LIST(APPEND FLUID_DIR ${PROJECT_SOURCE_DIR}/fluid)
foreach(FLUID_CURRENT_DIR ${FLUID_DIR})
	file(GLOB_RECURSE FLUID_SRCS ${FLUID_CURRENT_DIR}/*.cpp)
	file(GLOB_RECURSE FLUID_HDRS ${FLUID_CURRENT_DIR}/*.h)
	file(GLOB_RECURSE FLUID_HPPS ${FLUID_CURRENT_DIR}/*.hpp)
	LIST(APPEND FLUID_SRC_LIST ${FLUID_SRCS})
	LIST(APPEND FLUID_HDR_LIST ${FLUID_HDRS} ${FLUID_HPPS})
endforeach()
add_library(FLUID STATIC ${FLUID_SRC_LIST} ${FLUID_HDR_LIST})
