cmake_minimum_required(VERSION 3.5)

list(APPEND IMPROCESS_DIR ${PROJECT_SOURCE_DIR}/IMPROCESS)
foreach(IMPROCESS_CURRENT_DIR ${IMPROCESS_DIR})
	file(GLOB_RECURSE IMPROCESS_SRCS ${IMPROCESS_CURRENT_DIR}/*.cpp)
	file(GLOB_RECURSE IMPROCESS_HDRS ${IMPROCESS_CURRENT_DIR}/*.h)
	file(GLOB_RECURSE IMPROCESS_HPPS ${IMPROCESS_CURRENT_DIR}/*.hpp)
        list(APPEND IMPROCESS_SRC_LIST ${IMPROCESS_SRCS})
        list(APPEND IMPROCESS_HDR_LIST ${IMPROCESS_HDRS} ${IMPROCESS_HPPS})
endforeach()


add_library(IMPROCESS STATIC ${IMPROCESS_SRC_LIST} ${IMPROCESS_HDR_LIST})
