cmake_minimum_required(VERSION 3.5)

list(APPEND IMPROCESS_DIR ${PROJECT_SOURCE_DIR}/improcess)
foreach(IMPROCESS_CURRENT_DIR ${IMPROCESS_DIR})
    file(GLOB IMPROCESS_SRCS ${IMPROCESS_CURRENT_DIR}/*.cpp)
    file(GLOB IMPROCESS_HDRS ${IMPROCESS_CURRENT_DIR}/*.h)
    file(GLOB IMPROCESS_HPPS ${IMPROCESS_CURRENT_DIR}/*.hpp)
    list(APPEND IMPROCESS_SRC_LIST ${IMPROCESS_SRCS})
    list(APPEND IMPROCESS_HDR_LIST ${IMPROCESS_HDRS} ${IMPROCESS_HPPS})
endforeach()
# jpeg
if (USE_JPEG)
    file(GLOB JPEGWRAP_SRCS ${IMPROCESS_DIR}/jpegwrap/*.cpp)
    file(GLOB JPEGWRAP_HDRS ${IMPROCESS_DIR}/jpegwrap/*.h)
    list(APPEND IMPROCESS_SRC_LIST ${JPEGWRAP_SRCS})
    list(APPEND IMPROCESS_HDR_LIST ${JPEGWRAP_HDRS})
    message("IMPROCESS USE JPEG.")
endif()
# platform
if (WIN32)
    file(GLOB PLATFORM_SRCS ${IMPROCESS_DIR}/platform/windows/*.cpp)
    file(GLOB PLATFORM_HDRS ${IMPROCESS_DIR}/platform/windows/*.h)
    message("IMPROCESS IN PLATFORM WINDOWS.")
endif()

if (UNIX)
    #file(GLOB PLATFORM_SRCS ${IMPROCESS_DIR}/platform/linux/*.cpp)
    #file(GLOB PLATFORM_HDRS ${IMPROCESS_DIR}/platform/linux/*.h)
    #message("IMPROCESS IN PLATFORM LINUX.")
endif()

list(APPEND IMPROCESS_SRC_LIST ${PLATFORM_SRCS})
list(APPEND IMPROCESS_HDR_LIST ${PLATFORM_HDRS})
add_library(IMPROCESS STATIC ${IMPROCESS_SRC_LIST} ${IMPROCESS_HDR_LIST})
