cmake_minimum_required(VERSION 3.5)

list(APPEND SIMCL_DIR ${PROJECT_SOURCE_DIR}/simcl)
foreach(SIMCL_CURRENT_DIR ${SIMCL_DIR})
	file(GLOB_RECURSE SIMCL_SRCS ${SIMCL_CURRENT_DIR}/*.cpp)
	file(GLOB_RECURSE SIMCL_HDRS ${SIMCL_CURRENT_DIR}/*.h)
	file(GLOB_RECURSE SIMCL_HPPS ${SIMCL_CURRENT_DIR}/*.hpp)
        list(APPEND SIMCL_SRC_LIST ${SIMCL_SRCS})
        list(APPEND SIMCL_HDR_LIST ${SIMCL_HDRS} ${SIMCL_HPPS})
endforeach()


add_library(SIMCL STATIC ${SIMCL_SRC_LIST} ${SIMCL_HDR_LIST})
